<resources>
    <string name="app_name">Столовая ИТМО</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Табельный номер</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="welcome">"Добро пожаловать !"</string>
    <string name="invalid_username">Неправильный табельный номер</string>
    <string name="invalid_password">Пароль должен состоять из >5 символов</string>
    <string name="login_failed">"Не удалось войти"</string>
    <!-- Strings related to menu -->
    <string name="action_novelties">Новинки</string>
    <string name="action_popular">Популярное</string>
    <string name="action_breakfast">Завтраки</string>
    <string name="action_starter">Первые</string>
    <string name="action_second">Вторые</string>
    <string name="fragment_change_canteen">Другая</string>
    <!-- Strings related to product row -->
    <string name="action_add_to_cart">+</string>
    <!-- Strings related to header -->
    <string name="header_text_description">Меню ближайшей столовой</string>
    <string name="default_address">Кронверкский пр., 49</string>
    <!-- Strings related to footer -->
    <string name="action_footer_menu">Меню</string>
    <string name="action_footer_profile">Профиль</string>
    <string name="action_footer_cart">Корзина</string>
    <string name="action_footer_more">Ещё</string>
    <!-- Strings related to cart -->
    <string name="cart_total">Итого:</string>
    <string name="cart_title">Заказ из столовой</string>
    <string name="cart_empty">Корзина пуста</string>
    <string name="cart_empty_total">0</string>
    <string name="default_currency">₽</string>
    <!-- Strings related to order -->
    <string name="action_change_place">Изменить место</string>
    <string name="order_time_title">Время заказа</string>
    <string name="action_change_order_time">Изменить время</string>
    <string name="action_place_order">Оформить заказ</string>
    <string name="action_go_to_menu">Перейти в меню</string>
    <string name="action_finish_order">Готово!</string>
    <!-- Strings related to profile -->
    <string name="action_order_history">История\nзаказов</string>
    <string name="action_logout">Выйти</string>
    <!-- Menu image description -->
    <string name="default_image_description">Default product display image</string>
    <string name="itmo_logo_image_description">ITMO University logo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

</resources>